docs/api/qiskit/0.28/tools_jupyter.md
---
title: jupyter
description: API reference for qiskit.tools.jupyter
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.tools.jupyter
---

<span id="module-qiskit.tools.jupyter" />

<span id="qiskit-tools-jupyter" />

# Jupyter Tools

<span id="module-qiskit.tools.jupyter" />

`qiskit.tools.jupyter¶`

A Collection of Jupyter magic functions and tools that extend the functionality of Qiskit.

## Overview of all available backends

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
from qiskit import IBMQ
import qiskit.tools.jupyter
%matplotlib inline

IBMQ.load_account()

%qiskit_backend_overview
```

## Detailed information on a single backend

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
from qiskit import IBMQ
import qiskit.tools.jupyter
%matplotlib inline

IBMQ.load_account()
provider = IBMQ.get_provider(hub='ibm-q')
backend = provider.get_backend('ibmq_vigo')
backend
```

## Load Qiskit Job Watcher

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
import qiskit.tools.jupyter
%qiskit_job_watcher
```

## HTMLProgressBar

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
import numpy as np
from qiskit.tools.parallel import parallel_map
import qiskit.tools.jupyter

%qiskit_progress_bar
parallel_map(np.sin, np.linspace(0,10,100));
```

## Qiskit version table

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
import qiskit.tools.jupyter
%qiskit_version_table
```

### Version Information

| Qiskit Software              | Version                                               |
| ---------------------------- | ----------------------------------------------------- |
| `qiskit-terra`               | 0.18.0                                                |
| `qiskit-aer`                 | 0.8.2                                                 |
| `qiskit-ignis`               | 0.6.0                                                 |
| `qiskit-ibmq-provider`       | 0.15.0                                                |
| `qiskit-aqua`                | 0.9.4                                                 |
| `qiskit`                     | 0.28.0                                                |
| `qiskit-nature`              | 0.1.4                                                 |
| `qiskit-finance`             | 0.2.0                                                 |
| `qiskit-optimization`        | 0.2.0                                                 |
| `qiskit-machine-learning`    | 0.2.0                                                 |
| System information           |                                                       |
| Python                       | 3.7.12 (default, Nov 22 2021, 14:57:10) \[GCC 11.1.0] |
| OS                           | Linux                                                 |
| CPUs                         | 32                                                    |
| Memory (Gb)                  | 125.71650314331055                                    |
| Fri Dec 10 16:22:06 2021 EST |                                                       |

## Qiskit copyright

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
import qiskit.tools.jupyter
%qiskit_copyright
```

### This code is a part of Qiskit

© Copyright IBM 2017, 2021.

This code is licensed under the Apache License, Version 2.0. You mayobtain a copy of this license in the LICENSE.txt file in the root directoryof this source tree or at [http://www.apache.org/licenses/LICENSE-2.0](http://www.apache.org/licenses/LICENSE-2.0).

Any modifications or derivative works of this code must retain thiscopyright notice, and modified files need to carry a notice indicatingthat they have been altered from the originals.

## Monospaced output

<span id="module-qiskit.tools.jupyter" />

`¶`

```python
import qiskit.tools.jupyter
%monospaced_output
```

